--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
            <a href="https://github.com/sachmilan"> <img src="assets/javascript.png" alt="js" class="workimages"></a>
            </div>
            <div class="center1">
-           <a href="https://github.com/sachmilan"> <img src="assets/react.png" alt="R" class="workimages"></a>
+           <a href="https://interrobang-auction-house.herokuapp.com/"> <img src="assets/react.png" alt="R" class="workimages"></a>
            <a href="https://github.com/sachmilan"> <img src="assets/sql.jpg" alt="sql" class="workimages"></a>
            </div>
         </sec>
